# partial_cythonization

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-tests-conda.yaml
partial_cythonization/: __init__.py  cli.py  obfuscate.py
project_to_obfuscate/: partcy_config.toml  setup.py
project_to_obfuscate/some_package/: mod1.py  mod2.py  mod3_nb.py  mod4.pyx
project_to_obfuscate/some_package/data/: file1.csv  file3.csv
project_to_obfuscate/some_package/subpkg/: mod11.py
project_to_obfuscate/some_package/subpkg2/: never_share.py
project_to_obfuscate/tests/: test_mod11.py  test_mod2.py  test_mod3.py
tests/: __init__.py  test_partial_cythonization.py
